--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "phpunit/phpunit": "^9.5",
         "monolog/monolog": "^2.3",
         "symfony/event-dispatcher": "^5.3",
-        "symfony/http-foundation": "^5.3",
+        "symfony/http-foundation": "^5.3"
     },
     "autoload": {
         "psr-4": {
